content/networking/network-policy/simpson-demo/deployment/simpson/homer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homer
    app.kubernetes.io/component: homer
    app.kubernetes.io/instance: homer
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homer
    app.openshift.io/runtime: redhat
  name: homer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: homer
        deployment: homer
    spec:
      containers:
      - image: quay.io/openshift-examples/simple-http-server:micro
        imagePullPolicy: IfNotPresent
        name: http-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
