content/networking/network-policy/simpson-demo/deployment/simpson/marge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: marge
    app.kubernetes.io/component: marge
    app.kubernetes.io/instance: marge
    app.kubernetes.io/name: marge
    app.kubernetes.io/part-of: marge
    app.openshift.io/runtime: redhat
  name: marge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marge
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: marge
        deployment: marge
    spec:
      containers:
      - image: quay.io/openshift-examples/simple-http-server:micro
        imagePullPolicy: IfNotPresent
        name: http-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
