content/networking/network-policy/simpson-demo/deployment/simpson/homer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homer
    app.kubernetes.io/component: homer
    app.kubernetes.io/instance: homer
    app.kubernetes.io/name: homer
    app.kubernetes.io/part-of: homer
    app.openshift.io/runtime-version: micro
  name: homer
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: homer
    deployment: homer
