content/networking/network-policy/simpson-demo/deployment/simpson/marge-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: marge
    app.kubernetes.io/component: marge
    app.kubernetes.io/instance: marge
    app.kubernetes.io/name: marge
    app.kubernetes.io/part-of: marge
    app.openshift.io/runtime-version: micro
  name: marge
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: marge
    deployment: marge
