content/networking/network-policy/simpson-demo/deployment/simpson/marge-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: marge
    app.kubernetes.io/component: marge
    app.kubernetes.io/instance: marge
    app.kubernetes.io/name: marge
    app.kubernetes.io/part-of: marge
    app.openshift.io/runtime-version: micro
  name: marge
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: marge
    weight: 100
  wildcardPolicy: None
